crates/toml/tests/snapshots/invalid/string/bad-uni-esc-ml-2.stderr
TOML parse error at line 1, column 28
  |
1 | bad-uni-esc-ml-2 = """val\Ux"""
  |                            ^
invalid unicode 8-digit hex code
